# RS_Image_Processing

./: CMakeLists.txt  README.md  gdal cmakelists.txt  image.cpp  image.h  main.cpp
Output_Image/: gaojing_Stretched.tif  wuce_corrected.tif
data/Band_Combination/: gaojing_subset.tif.aux.xml
data/Geometric_Correction/: fixdpoints.txt  movingpoints.txt
include/: correct.h  image.h  main.h  water.h
src/: correct.cpp  image.cpp  main.cpp  water.cpp
